--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
             <h3><a href="#cont">Contact</a></h3>
         </div>
     </header>
+    <main class="main-div">
+        <!-- Here I will add the rest of the content of my website -->
+    <section id="personal-ethos">
+        <p>As a Software Engineer, I am passionate about leveraging technology to create innovative solutions and contribute to the ever-evolving landscape of the development industry. I am a dedicated and quick learner, always eager to explore new technologies and methodologies. Open collaboration and continuous learning from industry professionals are integral to my growth. Choosing me means gaining a motivated and adaptable team member who is committed to delivering high-quality solutions. I bring a blend of technical proficiency, a strong work ethic, and a passion for continuous improvement.</p>
+    </section>
+    </main>
 </body>
 </html>
