--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <!-- Here we will add the navingation bar to help the user interact with our web easily -->
         <div class="nav-bar">
-            <h3><a href="#skill">Skills</a></h3>
-            <h3><a href="#work-exp">Work Experience</a></h3>
+            <h3><a href="/skills.html">Skills</a></h3>
+            <h3><a href="/work-epx.html">Work Experience</a></h3>
             <h3><a href="#edu">Education</a></h3>
             <h3><a href="#proj">Projects</a></h3>
             <h3><a href="#cont">Contact</a></h3>
@@ -20,8 +20,9 @@
     <main class="main-div">
         <!-- Here I will add the rest of the content of my website -->
     <section id="personal-ethos">
-        <p>As a Software Engineer, I am passionate about leveraging technology to create innovative solutions and contribute to the ever-evolving landscape of the development industry. I am a dedicated and quick learner, always eager to explore new technologies and methodologies. Open collaboration and continuous learning from industry professionals are integral to my growth. Choosing me means gaining a motivated and adaptable team member who is committed to delivering high-quality solutions. I bring a blend of technical proficiency, a strong work ethic, and a passion for continuous improvement.</p>
+        <p id="typing-text"></p>
     </section>
     </main>
+    <script src="/index.js"></script>
 </body>
 </html>
