--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="nav-bar">
             <h3><a href="/skills.html">Skills</a></h3>
             <h3><a href="/work-epx.html">Work Experience</a></h3>
-            <h3><a href="#edu">Education</a></h3>
+            <h3><a href="/edu.html">Education</a></h3>
             <h3><a href="#proj">Projects</a></h3>
             <h3><a href="#cont">Contact</a></h3>
         </div>
