--- a/edu.html
+++ b/edu.html
@@ -17,6 +17,7 @@
         <h2>G.S Kimisagara</h2>
         <p class="date">2008 - 2014</p>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
         <a href="#" class="school-link" target="_blank">Learn more</a>
     </article>
 
@@ -24,6 +25,8 @@
         <h2>ESSI-Nyamirambo (O'Level)</h2>
         <p class="date">2015 - 2017</p>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
+
         <a href="#" class="school-link" target="_blank">Learn more</a>
     </article>
 
@@ -46,6 +49,7 @@
         <h2>African Leadership University</h2>
         <p class="date">2023 - Present</p>
         <p class="description">Enrolled in Software Engineering seeking a bachelor's degree for 4 years.</p>
+        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
         <a href="#" class="school-link" target="_blank">Learn more</a>
     </article>
 
@@ -53,6 +57,7 @@
         <h2>ALX Bootcamp</h2>
         <p class="date">July 2023 - Present</p>
         <p class="description">Enrolled as a Software Engineer.</p>
+        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
         <a href="#" class="school-link" target="_blank">Learn more</a>
     </article>
 
