--- a/work-epx.html
+++ b/work-epx.html
@@ -16,12 +16,17 @@
     <article class="experience">
         <h2>Customer Support Officer Supervisor</h2>
         <p class="company">BIRAS LTD - Delivery Services</p>
-        <p class="date">Your Start Date - Your End Date (if applicable)</p>
+        <p class="date">January, 2020 - November, 2022</p>
         <ul>
             <li>Managed and supervised a team of customer support officers</li>
             <li>Ensured timely and efficient resolution of customer inquiries and issues</li>
             <li>Collaborated with other departments to improve overall service quality</li>
         </ul>
+    </article>
+</section>
+<section id="experience-section">
+    <article class="experience">
+        <i>I am open to work and actively seeking employment to gain more professional experience related to my career as a software engineer. </i>
     </article>
 </section>
 
