--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h3><a href="/skills.html">Skills</a></h3>
             <h3><a href="/work-epx.html">Work Experience</a></h3>
             <h3><a href="/edu.html">Education</a></h3>
-            <h3><a href="#proj">Projects</a></h3>
-            <h3><a href="#cont">Contact</a></h3>
+            <h3><a href="/project.html">Projects</a></h3>
+            <h3><a href="/contact.html">Contact</a></h3>
         </div>
     </header>
     <main class="main-div">
