--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <p id="typing-text"></p>
     </section>
     </main>
-    <script src="/index.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
