--- a/edu.html
+++ b/edu.html
@@ -17,17 +17,15 @@
         <h2>G.S Kimisagara</h2>
         <p class="date">2008 - 2014</p>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
-        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
-        <a href="#" class="school-link" target="_blank">Learn more</a>
+        <a href="https://web.facebook.com/p/GSKimisagaras-English-Club-100068352490299/?_rdc=1&_rdr" class="school-link" target="_blank">Learn more</a>
     </article>
 
     <article class="education">
         <h2>ESSI-Nyamirambo (O'Level)</h2>
         <p class="date">2015 - 2017</p>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
-        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
 
-        <a href="#" class="school-link" target="_blank">Learn more</a>
+        <a href="https://essinyamirambo.ac.rw" class="school-link" target="_blank">Learn more</a>
     </article>
 
     <article class="education">
@@ -35,30 +33,27 @@
         <p class="date">One Trimester</p>
         <p class="description">Studied Math, Physics, and Chemistry.</p>
         <!-- Add image and link for the school -->
-        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
-        <a href="#" class="school-link" target="_blank">Learn more</a>
+        <a href="https://twitter.com/GsRilima" class="school-link" target="_blank">Learn more</a>
     </article>
 
     <article class="education">
         <h2>ESSI-Nyamirambo (2018 - 2020)</h2>
         <p class="description">Studied Mathematics, Physics, and Geography.</p>
-        <a href="#" class="school-link" target="_blank">Learn more</a>
+        <a href="https://essinyamirambo.ac.rw/" class="school-link" target="_blank">Learn more</a>
     </article>
 
     <article class="education">
         <h2>African Leadership University</h2>
         <p class="date">2023 - Present</p>
         <p class="description">Enrolled in Software Engineering seeking a bachelor's degree for 4 years.</p>
-        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
-        <a href="#" class="school-link" target="_blank">Learn more</a>
+        <a href="http://surl.li/qszyz" class="school-link" target="_blank">Learn more</a>
     </article>
 
     <article class="education">
         <h2>ALX Bootcamp</h2>
         <p class="date">July 2023 - Present</p>
         <p class="description">Enrolled as a Software Engineer.</p>
-        <div class="school-image" style="background-image: url('school_images/rilima_school.jpg');"></div>
-        <a href="#" class="school-link" target="_blank">Learn more</a>
+        <a href="http://surl.li/qszzx" class="school-link" target="_blank">Learn more</a>
     </article>
 
 </section>
