--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>Resume</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <!-- Here we will add the navingation bar to help the user interact with our web easily -->
         <div class="nav-bar">
-            <h3><a href="/skills.html">Skills</a></h3>
-            <h3><a href="/work-epx.html">Work Experience</a></h3>
-            <h3><a href="/edu.html">Education</a></h3>
-            <h3><a href="/project.html">Projects</a></h3>
-            <h3><a href="/contact.html">Contact</a></h3>
+            <h3><a href="skills.html">Skills</a></h3>
+            <h3><a href="work-epx.html">Work Experience</a></h3>
+            <h3><a href="edu.html">Education</a></h3>
+            <h3><a href="project.html">Projects</a></h3>
+            <h3><a href="contact.html">Contact</a></h3>
         </div>
     </header>
     <main class="main-div">
@@ -24,6 +24,6 @@
         <p id="typing-text"></p>
     </section>
     </main>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
