--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <!-- Here we will add the navigation bar to help the user interact with our web easily -->
         <div class="nav-bar">
             <h3><a href="skills.html">Skills</a></h3>
-            <h3><a href="work-experience.html">Work Experience</a></h3>
-            <h3><a href="education.html">Education</a></h3>
-            <h3><a href="projects.html">Projects</a></h3>
+            <h3><a href="work-epx.html">Work Experience</a></h3>
+            <h3><a href="edu.html">Education</a></h3>
+            <h3><a href="project.html">Projects</a></h3>
             <h3><a href="contact.html">Contact</a></h3>
         </div>
     </header>
