--- a/sub-html/edu.html
+++ b/sub-html/edu.html
@@ -16,14 +16,14 @@
     <article class="education">
         <h2>G.S Kimisagara</h2>
         <p class="date">2008 - 2014</p>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        <p class="description">Primary School</p>
         <a href="https://web.facebook.com/p/GSKimisagaras-English-Club-100068352490299/?_rdc=1&_rdr" class="school-link" target="_blank">Learn more</a>
     </article>
 
     <article class="education">
         <h2>ESSI-Nyamirambo (O'Level)</h2>
         <p class="date">2015 - 2017</p>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        <p class="description">High School Ordinal Level</p>
 
         <a href="https://essinyamirambo.ac.rw" class="school-link" target="_blank">Learn more</a>
     </article>
