--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
     <main class="main-div">
         <!-- Here I will add the rest of the content of my website -->
-<!--         <section id="personal-ethos">
+         <section id="personal-ethos">
             <p id="typing-text"></p>
-        </section> -->
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
