--- a/sub-html/projects.html
+++ b/sub-html/projects.html
@@ -23,12 +23,15 @@
                     <h2>Intermediate Projects</h2>
                     <ul>
                         <li><a href="https://euwamahoro.github.io/Calculator/" target="_blank">Calculator</a></li>
-                        <!-- Placeholder for the third intermediate project -->                    </ul>
+                    </ul>
+                        <!-- Placeholder for the third intermediate project -->             
                 </section>
 
                 <section id="professional-projects">
                     <h2>Professional Projects</h2>
-                    <li><a href="https://euwamahoro.github.io/Web_api/">World Weather App</a></li>
+                    <ul>
+                        <li><a href="https://euwamahoro.github.io/Web_api/">World Weather App</a></li>
+                    </ul>
                     <!-- Placeholder for professional projects -->
                 </section>
         </div>
