--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/sub-html/skills.html">Skills</a></li>
-            <li><a href="/sub-html/work_experience.html">Work Experience</a></li>
-            <li><a href="/sub-html/education.html">Education</a></li>
-            <li><a href="/sub-html/projects.html">Projects</a></li>
-            <li><a href="/sub-html/contact.html">Contact</a></li>
+            <li><a href="sub-html/skills.html">Skills</a></li>
+            <li><a href="sub-html/work_experience.html">Work Experience</a></li>
+            <li><a href="sub-html/education.html">Education</a></li>
+            <li><a href="sub-html/projects.html">Projects</a></li>
+            <li><a href="sub-html/contact.html">Contact</a></li>
         </ul>
     </nav>
 
