--- a/sub-html/skills.html
+++ b/sub-html/skills.html
@@ -36,8 +36,8 @@
                 <li><i class="fab fa-js"></i> JavaScript</li>
                 <li><i class="fab fa-node"></i> Node.js</li>
                 <li><i class="fab fa-python"></i>Python </li>
-                <li><i class="fab fa-"></i>Flask</li>
-                <li><i class="fab fa-"></i>mySQL</li>
+                <li><i class="fab fa-flask"></i>Flask</li>
+                <li><i class="fab fa-mysql"></i>mySQL</li>
             </ul>
         </div>
     </div>
